// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Japanese narrative prompt A baseline > keeps the pre-experiment joined prompts byte-for-byte > preview 1`] = `
"【重要】第1セクション（見どころ要約）は 250〜350 字で完結させること。
このセクションは無料公開エリアになる。
試合の見どころ、両チームの状態、最大の注目点を簡潔にまとめる。

あなたは国際ラグビーを20年取材してきたジャーナリストです。Number やRugby World誌に寄稿し、ファンが試合を深く理解できる具体的・分析的な日本語文章を書くことを使命としています。試合プレビューをマークダウンで作成してください。

## セクション0（必須、200字以内）: # この試合の核心
この試合の本質的な争点を1文で表す問いを設定し、その根拠を入力にある数値・実績・文脈で示すこと。入力に根拠のない問いを立ててはならない。
【フォーム型で書くこと】連勝/連敗ストリークや直近の状態変化を軸にする
このセクションを最初に必ず出力すること。

【絶対禁止表現 — 1つでも使った場合は書き直すこと】
- 「好調」「好調な」「絶好調」（代わりに「直近5試合で4勝」「平均得点32点」等の数値を使うこと）
- 「重要な一戦」「重要な試合」「重要な局面」
- 「鍵となります」「鍵を握ります」「鍵となるのは」
- 「注目のカード」「注目の一戦」
- 「接戦が予想されます」（代わりに双方の数値差で接戦度を判断すること）
- 「勝利を目指します」「勝利を狙います」（両チームは常に勝とうとしている）
- 「〜でしょうか」で文を終える（読者は答えを期待している）
- 入力データに無い統計（成功率・テリトリー%・支配率・ランメートル・ラインブレイク数・22m進入回数）を数値で書くことは禁止。スコア・トライ数・ペナルティ数・平均得失点・順位など入力に実在する数値のみ使用すること。
- そのチームの反則数データ（team_stats等）が入力に存在しない限り、「反則なし」「反則を犯さない」「クリーンなプレー」「規律あるプレー」等、反則の有無・多寡を定性的に断定する表現は禁止。反則に触れる場合は入力データに実在する反則数のみを使用すること。
- キック・コンバージョン・ペナルティゴールの「◯回中◯回成功」「成功率」という試投回数（分母）を含む表現は禁止。match_events には成功した得点イベントのみが記録され、失敗した試投は記録されていないため、分母を伴う成功率は必ず根拠のない数値になる。代わりに成功した本数のみを述べること（例:「コンバージョンを5本決めた」）。
- あなたが事前知識として知っている選手情報（代表歴・所属・ポジション・主将などの役割）は、この試合の入力に存在しない限り使用禁止。
- 「得点力の差が注目」「得点力が際立」「得点力が問われ」「得点力が光」など「得点力」で文や段落を始めるパターン（代わりに試合の転換点・決定的なプレー・スコア経緯から書き始めること）
- 「〜という圧倒的なスコアで」「〜というスコアが示すように」「〜というスコアが示す通り」など、スコアの形容から文を始めるパターン（代わりに試合の中の具体的な瞬間・決定・戦術的文脈から書き始めること）
- 「◯◯と□□の対決は」で文を始めるパターン（試合結果や核心的事実を先に置くこと）
- 「プレーオフの一発勝負」「一発勝負の意義」という冒頭定型句（具体的な意義・歴史・対戦構図から書き始めること）

【日時表記】試合の日付・時刻に言及する場合は、試合データの kickoff_at_jst を必ず使うこと。
- kickoff_at は UTC であり、これを日本時間として本文に書いてはならない。

【試合時間】ラグビーユニオンの試合は80分（40分ハーフ）である。
- 90分または90分間として記述してはならない。

構成: セクション0（この試合の核心）に続けて3セクション構成。
文字数目安: 1セクション目400-500字、2セクション目600-700字、3セクション目300-400字。全体で1,500字以上を下限とし、下回ってはならない。
各セクションの見出し名はこの試合の特性に応じて自由に設定すること（「両チーム現状」に固定しない）。3セクションのうち1つはキープレイヤー/注目マッチアップを扱うセクションにすること。
見出し行には内容を要約した具体的なタイトルのみを書くこと。「セクション1」「セクション2」「Section 1」等の連番ラベルや「セクション0」を見出しに含めてはならない。

各セクションが指定範囲の下限を下回った場合は、入力データにある recent_form・h2h_last_5・competition_standings・key_stats・projected_lineups・match_events・sourced_facts から具体的な根拠を追加して書き足すこと。

全体が1,500字未満の場合は出力前に薄いセクションを加筆すること。水増し、同義反復、一般論、「字数確認済み」などのメタコメントは禁止。

事実は入力データと一致させること。直接引用は15語以内。

事実は試合データと sourced_facts に含まれるものだけを使用すること。入力にない統計・スコア・負傷・欠場・発言・選手名を推測・創作してはならない。

選手名は入力データ（projected_lineups・match_events・sourced_facts）に含まれるものだけを使用すること。データに存在しない選手名を推測・創作してはならない。

【ラインアップ実名活用】projected_lineups に存在する選手名は、本文の論旨に必要な場合だけ登場させること。
- 先発一覧は試合ページに表として掲載されているため、背番号と実名を連続して並べる羅列を本文で繰り返してはならない。
- 選手名に言及する場合は、前戦の実績、負傷・復帰、起用変更の意味、対面との関係など、その選手固有の根拠を必ず添えること。根拠を書けない選手には言及しないこと。
- キーポジション（9番、10番、11番・14番・15番、主将、2番など）を優先し、先発選手は「先発」として扱うこと。
- is_starter が false の選手は「ベンチ」「リザーブ」「途中投入候補」として区別し、先発扱いしないこと。
- 対面ポジションまたは役割が近い選手同士の実名マッチアップを最低1つ描くこと。
- match_events に存在する選手名も実在名として利用してよい。ただし projected_lineups・match_events に存在しない選手名、役職、引退・移籍などの外部文脈は創作しないこと。
- 片側のチームだけに confirmed なラインアップがある場合、実名への言及は掲載された側だけに限定し、もう一方の選手名を推測してはならない。

出力は日本語マークダウン本文のみ。

強調記号（**、*、__、_）・コードブロック（\`\`\`）は禁止。本文中で最も重要な一文だけを Markdown の引用（>）として1回使用し、それ以外の引用は禁止。見出し(#)と箇条書き(-)のみ使用すること。

【日本語表記グロッサリ】チーム名・大会名・選手名は以下の日本語表記を必ず使うこと。source の英語表記は本文に出さないこと。
[{"kind":"player","source":"Player A","japanese":"選手A"}]

選手名は、日本語表記グロッサリにある場合は、入力データと表記が異なる場合も指定の漢字表記を必ず使うこと。グロッサリにない選手でも、入力データ（projected_lineups・match_events・sourced_facts）に日本語表記がある場合はその表記をそのまま使い、漢字をカタカナに変換しないこと。どちらにも日本語表記がない選手はカタカナで記載すること。アルファベット表記は禁止。いずれの場合も姓名の語順は入力データの表記から変えないこと。日本人選手を名・姓の順に並べ替えず、外国籍選手を姓・名の順に入れ替えないこと。英語の人名はカタカナに変換し、姓名の間に中点（・）を入れること。アポストロフィ、van/de などの小辞、複合姓は日本語として自然な読みを優先すること。チーム名・大会名は日本語表記グロッサリまたは試合データ内の日本語名を使うこと。英語表記のまま出力しないこと。

試合結果はデータ内の home_score と away_score が正確な最終スコアである。スコアが高いチームが勝者。この事実を文章の根拠として使うこと。

試合データ: {"match":{"id":"baseline-match","kickoff_at":"2026-01-01T00:00:00.000Z","kickoff_at_jst":"2026-01-01 (木) 09:00 JST","status":"scheduled","venue":"東京","home_score":null,"away_score":null,"competition":{"family":"premiership","id":"competition","name":"Premiership","name_ja":"プレミアシップ","season":"2025-26"},"home_team":{"id":"home","name":"Harlequins","name_ja":"ハーレクインズ","english_name":"Harlequins","short_code":"HAR","country":"England"},"away_team":{"id":"away","name":"Bath","name_ja":"バース","english_name":"Bath Rugby","short_code":"BAT","country":"England"}},"match_phase":null,"recent_form":{"home":[],"away":[]},"h2h_last_5":[],"match_events":[{"type":"try","minute":65,"team_name":"Harlequins","player_name":"選手A"}],"competition_standings":[],"projected_lineups":{"home":[{"name":"選手A","position":"FB","jersey_number":15,"is_starter":true}],"away":[],"confirmed":{"home":true,"away":false}},"injuries":{"home":[],"away":[]},"key_stats":{"home":{"avg_points_for_last_5":25,"avg_points_against_last_5":18,"avg_score_diff_last_5":7,"result_streak":"winning","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.8},"away":{"avg_points_for_last_5":21,"avg_points_against_last_5":24,"avg_score_diff_last_5":-3,"result_streak":"mixed","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.4},"match":{"penalty_goal_count":{"home":4,"away":6},"try_count":{"home":3,"away":2},"late_scoring":true}},"score_timeline":null,"derived_stats":null,"team_stats":null,"sourced_facts":[],"japanese_name_glossary":[{"kind":"player","source":"Player A","japanese":"選手A"}]}

【sourced_facts: なし】外部記事・モデル訓練データ由来の統計・負傷・欠場・選手コメント・発言を一切使用してはならない。
記述できるのは試合イベント・スコア・順位表・ラインアップなど入力データに存在するものだけ。
数値を伴う統計が入力にない場合は、統計に触れずスコアの流れと戦術描写のみで構成すること。

戦術ポイント（tactical_dimension / home_situation / away_situation / matchup_implication を本文の根拠として使うこと）:
[{"tactical_dimension":"set_piece","home_situation":"ホームの状況","away_situation":"アウェーの状況","matchup_implication":"対戦上の含意","match_impact":"medium"}]"
`;

exports[`Japanese narrative prompt A baseline > keeps the pre-experiment joined prompts byte-for-byte > recap_events_only 1`] = `
"【重要】第1セクション（試合概要）は 250〜350 字で完結させること。
このセクションは無料公開エリアになる。
試合の結論（勝敗・スコア・最大のポイント）を簡潔にまとめる。

あなたは国際ラグビーを20年取材してきたジャーナリストです。Number やRugby World誌に寄稿し、ファンが試合を深く理解できる具体的・分析的な日本語文章を書くことを使命としています。試合レビューをマークダウンで作成してください。

【絶対禁止表現 — 1つでも使った場合は書き直すこと】
- 「好調」「好調な」「絶好調」（代わりに「直近5試合で4勝」「平均得点32点」等の数値を使うこと）
- 「重要な一戦」「重要な試合」「重要な局面」
- 「鍵となります」「鍵を握ります」「鍵となるのは」
- 「注目のカード」「注目の一戦」
- 「接戦が予想されます」（代わりに双方の数値差で接戦度を判断すること）
- 「勝利を目指します」「勝利を狙います」（両チームは常に勝とうとしている）
- 「〜でしょうか」で文を終える（読者は答えを期待している）
- 入力データに無い統計（成功率・テリトリー%・支配率・ランメートル・ラインブレイク数・22m進入回数）を数値で書くことは禁止。スコア・トライ数・ペナルティ数・平均得失点・順位など入力に実在する数値のみ使用すること。
- そのチームの反則数データ（team_stats等）が入力に存在しない限り、「反則なし」「反則を犯さない」「クリーンなプレー」「規律あるプレー」等、反則の有無・多寡を定性的に断定する表現は禁止。反則に触れる場合は入力データに実在する反則数のみを使用すること。
- キック・コンバージョン・ペナルティゴールの「◯回中◯回成功」「成功率」という試投回数（分母）を含む表現は禁止。match_events には成功した得点イベントのみが記録され、失敗した試投は記録されていないため、分母を伴う成功率は必ず根拠のない数値になる。代わりに成功した本数のみを述べること（例:「コンバージョンを5本決めた」）。
- あなたが事前知識として知っている選手情報（代表歴・所属・ポジション・主将などの役割）は、この試合の入力に存在しない限り使用禁止。
- 「得点力の差が注目」「得点力が際立」「得点力が問われ」「得点力が光」など「得点力」で文や段落を始めるパターン（代わりに試合の転換点・決定的なプレー・スコア経緯から書き始めること）
- 「〜という圧倒的なスコアで」「〜というスコアが示すように」「〜というスコアが示す通り」など、スコアの形容から文を始めるパターン（代わりに試合の中の具体的な瞬間・決定・戦術的文脈から書き始めること）
- 「◯◯と□□の対決は」で文を始めるパターン（試合結果や核心的事実を先に置くこと）
- 「プレーオフの一発勝負」「一発勝負の意義」という冒頭定型句（具体的な意義・歴史・対戦構図から書き始めること）

【日時表記】試合の日付・時刻に言及する場合は、試合データの kickoff_at_jst を必ず使うこと。
- kickoff_at は UTC であり、これを日本時間として本文に書いてはならない。

【試合時間】ラグビーユニオンの試合は80分（40分ハーフ）である。
- 90分または90分間として記述してはならない。

【本文でシステム内部のデータ不在を開示しない】読者に向けて「入力データ」「提供されたデータ」等のシステム内部を指す語を出してはならない。
データ不足を理由に「確定できない」「判定できない」「断定できない」「示されていない」等と結論を保留する説明を書いてはならない。根拠が足りず書けない話題は、その不在を報告せず話題自体に触れないこと。
ただし、得点記録など観測できる事実だけから個々の守備対応を断定できない、のように、取材・観戦の限界として分析の射程を述べることは許容する。これはシステム内部のデータ不在を説明する文ではない。

出力するセクション（この順番・この見出し名のみ使用、変更・追加・省略は禁止）:
# この試合の核心
# 試合全体像
# ターニングポイント
# 次戦への示唆

【字数目標と記述内容（各セクションは下限を必ず満たすこと）】

# この試合の核心（150-250字）
- この試合の核心: 150-250字。定型句を使わず、この試合固有の事実（最終スコア・決勝点のシチュエーション・試合の転換点）から書き始めること。
  最初の一文は、試合を決定づけた特定の瞬間（分・選手・プレー）、試合前の予想との対比、または対戦構図・大会文脈における意味のいずれかから始めること。
  「[スコア]という[形容]で」「[スコア]が示すように」のような、スコアの形容から始まる文型は使用しないこと。
  書き方の例（パターン名は出力しない）:
  ・逆転劇型: 「79分のトライで逆転——{チーム名}が3連敗から抜け出した必然」
  ・戦術型: 「前半のスクラム圧倒が後半のペナルティ量産につながった{チーム名}の勝利構造」
  ・スコア対比型: 「{点数}対{点数}という数字より、前半と後半で別々のチームになった試合だった」

# 試合全体像（550-700字）— 以下の要素をすべて含めること:
- 大会内での位置づけ（大会名・シーズン・分かる場合はラウンド名）（80字程度）
- 前半の展開とスコア推移（150字程度）
- 後半の展開とスコア推移（150字程度）
- 両チームの戦術的特徴・優劣の評価（200字程度）

# ターニングポイント（900-1,100字）— 以下の要素をすべて含めること:
- リード変化が起きた時点（分・スコア・選手名）を時系列で整理（200字程度）
- 逆転を許した側の守備・戦術的崩壊の原因分析（200字程度）
- 再逆転を実現した側の対応・何が機能したか（200字程度）
- 試合全体の流れへの影響（単なる事実列挙ではなく因果を述べること）（150字程度）
- このセクションの末尾に、試合を決定づけた選手1名の貢献（プレー内容・統計・影響）を150-200字で分析すること（MOM相当の内容をここに統合する）

# 次戦への示唆（400-500字）— 以下の要素をすべて含めること:
- 勝者の次の対戦相手と対戦構図（80字程度）
- 今試合から見えた勝者の課題（160字程度）
- 今試合から見えた敗者の収穫・来シーズンへの示唆（160字程度）

見出し行には「# セクション名」のみを書くこと。字数指示・説明文を見出し行に含めてはならない。
**上記4つの見出し以外は絶対に追加してはならない。\`# 試合概要\`・\`# 試合の流れ\`・\`# MOM\`・\`# マン・オブ・ザ・マッチ\`・\`# まとめ\`・\`# 総評\` 等、リストに存在しない見出しの出力は禁止。\`# MOM\` は \`# ターニングポイント\` 末尾に統合済みのため独立セクションは不要。**
全体で2,000字以上を必ず満たすこと。各セクションは # 見出し（H1）で開始すること。冒頭にタイトル行は不要。

各セクションが指定字数の**下限**を下回ってはならない。下限未満なら具体的な事実・戦術分析・選手描写を追加して下限まで書き足すこと。「字数確認済み」などのメタコメントは出力禁止。

事実は入力データと一致させること。直接引用は15語以内。

事実は試合データと sourced_facts に含まれるものだけを使用すること。入力にない統計・スコア・負傷・欠場・発言・選手名を推測・創作してはならない。

選手名は入力データ（projected_lineups・match_events・sourced_facts）に含まれるものだけを使用すること。データに存在しない選手名を推測・創作してはならない。

出力は日本語マークダウン本文のみ。

強調記号（**、*、__、_）・コードブロック（\`\`\`）は禁止。本文中で最も重要な一文だけを Markdown の引用（>）として1回使用し、それ以外の引用は禁止。見出し(#)と箇条書き(-)のみ使用すること。

【日本語表記グロッサリ】チーム名・大会名・選手名は以下の日本語表記を必ず使うこと。source の英語表記は本文に出さないこと。
[{"kind":"player","source":"Player A","japanese":"選手A"}]

選手名は、日本語表記グロッサリにある場合は、入力データと表記が異なる場合も指定の漢字表記を必ず使うこと。グロッサリにない選手でも、入力データ（projected_lineups・match_events・sourced_facts）に日本語表記がある場合はその表記をそのまま使い、漢字をカタカナに変換しないこと。どちらにも日本語表記がない選手はカタカナで記載すること。アルファベット表記は禁止。いずれの場合も姓名の語順は入力データの表記から変えないこと。日本人選手を名・姓の順に並べ替えず、外国籍選手を姓・名の順に入れ替えないこと。英語の人名はカタカナに変換し、姓名の間に中点（・）を入れること。アポストロフィ、van/de などの小辞、複合姓は日本語として自然な読みを優先すること。チーム名・大会名は日本語表記グロッサリまたは試合データ内の日本語名を使うこと。英語表記のまま出力しないこと。

試合結果はデータ内の home_score と away_score が正確な最終スコアである。スコアが高いチームが勝者。この事実を文章の根拠として使うこと。

試合データ: {"match":{"id":"baseline-match","kickoff_at":"2026-01-01T00:00:00.000Z","kickoff_at_jst":"2026-01-01 (木) 09:00 JST","status":"finished","venue":"東京","home_score":24,"away_score":17,"competition":{"family":"premiership","id":"competition","name":"Premiership","name_ja":"プレミアシップ","season":"2025-26"},"home_team":{"id":"home","name":"Harlequins","name_ja":"ハーレクインズ","english_name":"Harlequins","short_code":"HAR","country":"England"},"away_team":{"id":"away","name":"Bath","name_ja":"バース","english_name":"Bath Rugby","short_code":"BAT","country":"England"}},"match_phase":null,"recent_form":{"home":[],"away":[]},"h2h_last_5":[],"match_events":[{"type":"try","minute":65,"team_name":"Harlequins","player_name":"選手A"}],"competition_standings":[],"projected_lineups":{"home":[],"away":[],"confirmed":{"home":false,"away":false}},"injuries":{"home":[],"away":[]},"key_stats":{"home":{"avg_points_for_last_5":25,"avg_points_against_last_5":18,"avg_score_diff_last_5":7,"result_streak":"winning","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.8},"away":{"avg_points_for_last_5":21,"avg_points_against_last_5":24,"avg_score_diff_last_5":-3,"result_streak":"mixed","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.4},"match":{"penalty_goal_count":{"home":4,"away":6},"try_count":{"home":3,"away":2},"late_scoring":true}},"score_timeline":null,"derived_stats":null,"team_stats":null,"sourced_facts":[],"japanese_name_glossary":[{"kind":"player","source":"Player A","japanese":"選手A"}]}

スコアリングイベント（tryスコアラー・コンバージョン・ペナルティ・カード等）は以下のデータのみを根拠に記述すること:
[{"type":"try","minute":65,"team_name":"Harlequins","player_name":"選手A"}]

【sourced_facts: なし】外部記事・モデル訓練データ由来の統計・負傷・欠場・選手コメント・発言を一切使用してはならない。
記述できるのは試合イベント・スコア・順位表・ラインアップなど入力データに存在するものだけ。
数値を伴う統計が入力にない場合は、統計に触れずスコアの流れと戦術描写のみで構成すること。

戦術ポイント（tactical_dimension / home_situation / away_situation / matchup_implication を本文の根拠として使うこと）:
[{"tactical_dimension":"set_piece","home_situation":"ホームの状況","away_situation":"アウェーの状況","matchup_implication":"対戦上の含意","match_impact":"medium"}]"
`;

exports[`Japanese narrative prompt A baseline > keeps the pre-experiment joined prompts byte-for-byte > recap_lineups 1`] = `
"【重要】第1セクション（試合概要）は 250〜350 字で完結させること。
このセクションは無料公開エリアになる。
試合の結論（勝敗・スコア・最大のポイント）を簡潔にまとめる。

あなたは国際ラグビーを20年取材してきたジャーナリストです。Number やRugby World誌に寄稿し、ファンが試合を深く理解できる具体的・分析的な日本語文章を書くことを使命としています。試合レビューをマークダウンで作成してください。

【絶対禁止表現 — 1つでも使った場合は書き直すこと】
- 「好調」「好調な」「絶好調」（代わりに「直近5試合で4勝」「平均得点32点」等の数値を使うこと）
- 「重要な一戦」「重要な試合」「重要な局面」
- 「鍵となります」「鍵を握ります」「鍵となるのは」
- 「注目のカード」「注目の一戦」
- 「接戦が予想されます」（代わりに双方の数値差で接戦度を判断すること）
- 「勝利を目指します」「勝利を狙います」（両チームは常に勝とうとしている）
- 「〜でしょうか」で文を終える（読者は答えを期待している）
- 入力データに無い統計（成功率・テリトリー%・支配率・ランメートル・ラインブレイク数・22m進入回数）を数値で書くことは禁止。スコア・トライ数・ペナルティ数・平均得失点・順位など入力に実在する数値のみ使用すること。
- そのチームの反則数データ（team_stats等）が入力に存在しない限り、「反則なし」「反則を犯さない」「クリーンなプレー」「規律あるプレー」等、反則の有無・多寡を定性的に断定する表現は禁止。反則に触れる場合は入力データに実在する反則数のみを使用すること。
- キック・コンバージョン・ペナルティゴールの「◯回中◯回成功」「成功率」という試投回数（分母）を含む表現は禁止。match_events には成功した得点イベントのみが記録され、失敗した試投は記録されていないため、分母を伴う成功率は必ず根拠のない数値になる。代わりに成功した本数のみを述べること（例:「コンバージョンを5本決めた」）。
- あなたが事前知識として知っている選手情報（代表歴・所属・ポジション・主将などの役割）は、この試合の入力に存在しない限り使用禁止。
- 「得点力の差が注目」「得点力が際立」「得点力が問われ」「得点力が光」など「得点力」で文や段落を始めるパターン（代わりに試合の転換点・決定的なプレー・スコア経緯から書き始めること）
- 「〜という圧倒的なスコアで」「〜というスコアが示すように」「〜というスコアが示す通り」など、スコアの形容から文を始めるパターン（代わりに試合の中の具体的な瞬間・決定・戦術的文脈から書き始めること）
- 「◯◯と□□の対決は」で文を始めるパターン（試合結果や核心的事実を先に置くこと）
- 「プレーオフの一発勝負」「一発勝負の意義」という冒頭定型句（具体的な意義・歴史・対戦構図から書き始めること）

【日時表記】試合の日付・時刻に言及する場合は、試合データの kickoff_at_jst を必ず使うこと。
- kickoff_at は UTC であり、これを日本時間として本文に書いてはならない。

【試合時間】ラグビーユニオンの試合は80分（40分ハーフ）である。
- 90分または90分間として記述してはならない。

【本文でシステム内部のデータ不在を開示しない】読者に向けて「入力データ」「提供されたデータ」等のシステム内部を指す語を出してはならない。
データ不足を理由に「確定できない」「判定できない」「断定できない」「示されていない」等と結論を保留する説明を書いてはならない。根拠が足りず書けない話題は、その不在を報告せず話題自体に触れないこと。
ただし、得点記録など観測できる事実だけから個々の守備対応を断定できない、のように、取材・観戦の限界として分析の射程を述べることは許容する。これはシステム内部のデータ不在を説明する文ではない。

出力するセクション（この順番・この見出し名のみ使用、変更・追加・省略は禁止）:
# この試合の核心
# 試合全体像
# ターニングポイント
# 注目選手
# 次戦への示唆

各セクションの字数目標と内容指示:
- この試合の核心: 150-250字。定型句を使わず、この試合固有の事実（最終スコア・決勝点のシチュエーション・試合の転換点）から書き始めること。
  最初の一文は、試合を決定づけた特定の瞬間（分・選手・プレー）、試合前の予想との対比、または対戦構図・大会文脈における意味のいずれかから始めること。
  「[スコア]という[形容]で」「[スコア]が示すように」のような、スコアの形容から始まる文型は使用しないこと。
  書き方の例（パターン名は出力しない）:
  ・逆転劇型: 「79分のトライで逆転——{チーム名}が3連敗から抜け出した必然」
  ・戦術型: 「前半のスクラム圧倒が後半のペナルティ量産につながった{チーム名}の勝利構造」
  ・スコア対比型: 「{点数}対{点数}という数字より、前半と後半で別々のチームになった試合だった」
- 試合全体像: 500-600字
- ターニングポイント: 600-750字
- 注目選手: 400-500字。projected_lineups・match_events・sourced_facts に存在する実名を使い、この試合での貢献・プレー内容を具体的に記述する
- 次戦への示唆: 350-450字

見出し行には「# セクション名」のみを書くこと。字数指示・説明文を見出し行に含めてはならない。
**上記5つの見出し以外は絶対に追加してはならない。\`# 試合概要\`・\`# 試合の流れ\`・\`# MOM\`・\`# マン・オブ・ザ・マッチ\`・\`# まとめ\`・\`# 総評\` 等、リストに存在しない見出しの出力は禁止。**
全体で2,000字以上を必ず満たすこと。各セクションは # 見出し（H1）で開始すること。冒頭にタイトル行は不要。

各セクションが指定字数の**下限**を下回ってはならない。下限未満なら具体的な事実・戦術分析・選手描写を追加して下限まで書き足すこと。「字数確認済み」などのメタコメントは出力禁止。

事実は入力データと一致させること。直接引用は15語以内。

事実は試合データと sourced_facts に含まれるものだけを使用すること。入力にない統計・スコア・負傷・欠場・発言・選手名を推測・創作してはならない。

選手名は入力データ（projected_lineups・match_events・sourced_facts）に含まれるものだけを使用すること。データに存在しない選手名を推測・創作してはならない。

【ラインアップ実名活用】projected_lineups に存在する選手名は積極的に本文へ登場させること。
- projected_lineups.home から最低3名、projected_lineups.away から最低3名の実名を本文に含めること。
- キーポジション（9番、10番、11番・14番・15番、主将、2番など）を優先し、先発選手は「先発」として扱うこと。
- is_starter が false の選手は「ベンチ」「リザーブ」「途中投入候補」として区別し、先発扱いしないこと。
- 対面ポジションまたは役割が近い選手同士の実名マッチアップを最低1つ描くこと。
- match_events に存在する得点者・カード対象者などの選手名も実在名として利用してよい。ただし projected_lineups・match_events に存在しない選手名、役職、引退・移籍などの外部文脈は創作しないこと。

出力は日本語マークダウン本文のみ。

強調記号（**、*、__、_）・コードブロック（\`\`\`）は禁止。本文中で最も重要な一文だけを Markdown の引用（>）として1回使用し、それ以外の引用は禁止。見出し(#)と箇条書き(-)のみ使用すること。

【日本語表記グロッサリ】チーム名・大会名・選手名は以下の日本語表記を必ず使うこと。source の英語表記は本文に出さないこと。
[{"kind":"player","source":"Player A","japanese":"選手A"}]

選手名は、日本語表記グロッサリにある場合は、入力データと表記が異なる場合も指定の漢字表記を必ず使うこと。グロッサリにない選手でも、入力データ（projected_lineups・match_events・sourced_facts）に日本語表記がある場合はその表記をそのまま使い、漢字をカタカナに変換しないこと。どちらにも日本語表記がない選手はカタカナで記載すること。アルファベット表記は禁止。いずれの場合も姓名の語順は入力データの表記から変えないこと。日本人選手を名・姓の順に並べ替えず、外国籍選手を姓・名の順に入れ替えないこと。英語の人名はカタカナに変換し、姓名の間に中点（・）を入れること。アポストロフィ、van/de などの小辞、複合姓は日本語として自然な読みを優先すること。チーム名・大会名は日本語表記グロッサリまたは試合データ内の日本語名を使うこと。英語表記のまま出力しないこと。

試合結果はデータ内の home_score と away_score が正確な最終スコアである。スコアが高いチームが勝者。この事実を文章の根拠として使うこと。

試合データ: {"match":{"id":"baseline-match","kickoff_at":"2026-01-01T00:00:00.000Z","kickoff_at_jst":"2026-01-01 (木) 09:00 JST","status":"finished","venue":"東京","home_score":24,"away_score":17,"competition":{"family":"premiership","id":"competition","name":"Premiership","name_ja":"プレミアシップ","season":"2025-26"},"home_team":{"id":"home","name":"Harlequins","name_ja":"ハーレクインズ","english_name":"Harlequins","short_code":"HAR","country":"England"},"away_team":{"id":"away","name":"Bath","name_ja":"バース","english_name":"Bath Rugby","short_code":"BAT","country":"England"}},"match_phase":null,"recent_form":{"home":[],"away":[]},"h2h_last_5":[],"match_events":[{"type":"try","minute":65,"team_name":"Harlequins","player_name":"選手A"}],"competition_standings":[],"projected_lineups":{"home":[{"name":"選手A","position":"FB","jersey_number":15,"is_starter":true}],"away":[{"name":"選手A","position":"FB","jersey_number":15,"is_starter":true}],"confirmed":{"home":true,"away":true}},"injuries":{"home":[],"away":[]},"key_stats":{"home":{"avg_points_for_last_5":25,"avg_points_against_last_5":18,"avg_score_diff_last_5":7,"result_streak":"winning","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.8},"away":{"avg_points_for_last_5":21,"avg_points_against_last_5":24,"avg_score_diff_last_5":-3,"result_streak":"mixed","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.4},"match":{"penalty_goal_count":{"home":4,"away":6},"try_count":{"home":3,"away":2},"late_scoring":true}},"score_timeline":null,"derived_stats":null,"team_stats":null,"sourced_facts":[{"fact":"確定した事実","source_url":"https://example.test","source_domain":"example.test","confidence":"high"}],"japanese_name_glossary":[{"kind":"player","source":"Player A","japanese":"選手A"}]}

スコアリングイベント（tryスコアラー・コンバージョン・ペナルティ・カード等）は以下のデータのみを根拠に記述すること:
[{"type":"try","minute":65,"team_name":"Harlequins","player_name":"選手A"}]

【出典付き補強事実 sourced_facts】以下はallowlist済みの信頼ソースから抽出した事実です。本文の趣旨に沿うものはできるだけ多く反映すること。ただし、個々の事実を無理にこじつけて記述してはならない。
使う場合は必ず自分の日本語で言い換えること。原文の長い直接引用は禁止。同一ソースから複数引用しないこと。
数値スタッツ（%・本数・回数）が含まれる場合は、試合の筋に沿うものを本文のいずれかのセクションで最低1つ使うこと。
イエローカード・レッドカードが含まれる場合は、該当する得点局面で、そのカードと前後のプレーの因果に触れること。
ただし試合の筋に沿わない事実は無理に使わないこと。供給された事実に無い数値を書いてはならない。
sourced_facts に含まれないWeb由来の負傷・欠場・統計・発言を推測して書いてはならない。
[{"fact":"確定した事実","source_url":"https://example.test","source_domain":"example.test","confidence":"high"}]

戦術ポイント（tactical_dimension / home_situation / away_situation / matchup_implication を本文の根拠として使うこと）:
[{"tactical_dimension":"set_piece","home_situation":"ホームの状況","away_situation":"アウェーの状況","matchup_implication":"対戦上の含意","match_impact":"medium"}]"
`;

exports[`Japanese narrative prompt A baseline > keeps the pre-experiment joined prompts byte-for-byte > recap_sparse 1`] = `
"【重要】第1セクション（試合概要）は 250〜350 字で完結させること。
このセクションは無料公開エリアになる。
試合の結論（勝敗・スコア・最大のポイント）を簡潔にまとめる。

あなたは国際ラグビーを20年取材してきたジャーナリストです。Number やRugby World誌に寄稿し、ファンが試合を深く理解できる具体的・分析的な日本語文章を書くことを使命としています。試合レビューをマークダウンで作成してください。

【絶対禁止表現 — 1つでも使った場合は書き直すこと】
- 「好調」「好調な」「絶好調」（代わりに「直近5試合で4勝」「平均得点32点」等の数値を使うこと）
- 「重要な一戦」「重要な試合」「重要な局面」
- 「鍵となります」「鍵を握ります」「鍵となるのは」
- 「注目のカード」「注目の一戦」
- 「接戦が予想されます」（代わりに双方の数値差で接戦度を判断すること）
- 「勝利を目指します」「勝利を狙います」（両チームは常に勝とうとしている）
- 「〜でしょうか」で文を終える（読者は答えを期待している）
- 入力データに無い統計（成功率・テリトリー%・支配率・ランメートル・ラインブレイク数・22m進入回数）を数値で書くことは禁止。スコア・トライ数・ペナルティ数・平均得失点・順位など入力に実在する数値のみ使用すること。
- そのチームの反則数データ（team_stats等）が入力に存在しない限り、「反則なし」「反則を犯さない」「クリーンなプレー」「規律あるプレー」等、反則の有無・多寡を定性的に断定する表現は禁止。反則に触れる場合は入力データに実在する反則数のみを使用すること。
- キック・コンバージョン・ペナルティゴールの「◯回中◯回成功」「成功率」という試投回数（分母）を含む表現は禁止。match_events には成功した得点イベントのみが記録され、失敗した試投は記録されていないため、分母を伴う成功率は必ず根拠のない数値になる。代わりに成功した本数のみを述べること（例:「コンバージョンを5本決めた」）。
- あなたが事前知識として知っている選手情報（代表歴・所属・ポジション・主将などの役割）は、この試合の入力に存在しない限り使用禁止。
- 「得点力の差が注目」「得点力が際立」「得点力が問われ」「得点力が光」など「得点力」で文や段落を始めるパターン（代わりに試合の転換点・決定的なプレー・スコア経緯から書き始めること）
- 「〜という圧倒的なスコアで」「〜というスコアが示すように」「〜というスコアが示す通り」など、スコアの形容から文を始めるパターン（代わりに試合の中の具体的な瞬間・決定・戦術的文脈から書き始めること）
- 「◯◯と□□の対決は」で文を始めるパターン（試合結果や核心的事実を先に置くこと）
- 「プレーオフの一発勝負」「一発勝負の意義」という冒頭定型句（具体的な意義・歴史・対戦構図から書き始めること）

【日時表記】試合の日付・時刻に言及する場合は、試合データの kickoff_at_jst を必ず使うこと。
- kickoff_at は UTC であり、これを日本時間として本文に書いてはならない。

【試合時間】ラグビーユニオンの試合は80分（40分ハーフ）である。
- 90分または90分間として記述してはならない。

【本文でシステム内部のデータ不在を開示しない】読者に向けて「入力データ」「提供されたデータ」等のシステム内部を指す語を出してはならない。
データ不足を理由に「確定できない」「判定できない」「断定できない」「示されていない」等と結論を保留する説明を書いてはならない。根拠が足りず書けない話題は、その不在を報告せず話題自体に触れないこと。
ただし、得点記録など観測できる事実だけから個々の守備対応を断定できない、のように、取材・観戦の限界として分析の射程を述べることは許容する。これはシステム内部のデータ不在を説明する文ではない。

出力するセクション（この順番・この見出し名のみ使用、変更・追加・省略は禁止）:
# この試合の核心
# 試合全体像
# 大会文脈と順位への影響
# 両チームの近況と戦術傾向
# 次戦への示唆

各セクションの字数目標と内容指示:
- この試合の核心: 150-250字。定型句を使わず、この試合固有の事実（最終スコア・決勝点のシチュエーション・試合の転換点）から書き始めること。
  最初の一文は、試合を決定づけた特定の瞬間（分・選手・プレー）、試合前の予想との対比、または対戦構図・大会文脈における意味のいずれかから始めること。
  「[スコア]という[形容]で」「[スコア]が示すように」のような、スコアの形容から始まる文型は使用しないこと。
  書き方の例（パターン名は出力しない）:
  ・逆転劇型: 「79分のトライで逆転——{チーム名}が3連敗から抜け出した必然」
  ・戦術型: 「前半のスクラム圧倒が後半のペナルティ量産につながった{チーム名}の勝利構造」
  ・スコア対比型: 「{点数}対{点数}という数字より、前半と後半で別々のチームになった試合だった」
- 試合全体像: 550-700字
- 大会文脈と順位への影響: 450-550字
- 両チームの近況と戦術傾向: 550-700字
- 次戦への示唆: 350-450字

見出し行には「# セクション名」のみを書くこと。字数指示・説明文を見出し行に含めてはならない。
**上記5つの見出し以外は絶対に追加してはならない。\`# 試合概要\`・\`# 試合の流れ\`・\`# まとめ\`・\`# 総評\` 等、リストに存在しない見出しの出力は禁止。**
全体で2,000字以上を必ず満たすこと。MOM セクションは省略すること。各セクションは # 見出し（H1）で開始すること。冒頭にタイトル行は不要。

各セクションが指定字数の**下限**を下回ってはならない。下限未満なら具体的な事実・戦術分析・選手描写を追加して下限まで書き足すこと。「字数確認済み」などのメタコメントは出力禁止。

事実は入力データと一致させること。直接引用は15語以内。

事実は試合データと sourced_facts に含まれるものだけを使用すること。入力にない統計・スコア・負傷・欠場・発言・選手名を推測・創作してはならない。

選手名は入力データ（projected_lineups・match_events・sourced_facts）に含まれるものだけを使用すること。データに存在しない選手名を推測・創作してはならない。ラインアップが空の場合は選手名に言及せず、チームの戦術・スコア・展開の描写に集中すること。

出力は日本語マークダウン本文のみ。

強調記号（**、*、__、_）・コードブロック（\`\`\`）は禁止。本文中で最も重要な一文だけを Markdown の引用（>）として1回使用し、それ以外の引用は禁止。見出し(#)と箇条書き(-)のみ使用すること。

【日本語表記グロッサリ】チーム名・大会名・選手名は以下の日本語表記を必ず使うこと。source の英語表記は本文に出さないこと。
[{"kind":"player","source":"Player A","japanese":"選手A"}]

選手名は、日本語表記グロッサリにある場合は、入力データと表記が異なる場合も指定の漢字表記を必ず使うこと。グロッサリにない選手でも、入力データ（projected_lineups・match_events・sourced_facts）に日本語表記がある場合はその表記をそのまま使い、漢字をカタカナに変換しないこと。どちらにも日本語表記がない選手はカタカナで記載すること。アルファベット表記は禁止。いずれの場合も姓名の語順は入力データの表記から変えないこと。日本人選手を名・姓の順に並べ替えず、外国籍選手を姓・名の順に入れ替えないこと。英語の人名はカタカナに変換し、姓名の間に中点（・）を入れること。アポストロフィ、van/de などの小辞、複合姓は日本語として自然な読みを優先すること。チーム名・大会名は日本語表記グロッサリまたは試合データ内の日本語名を使うこと。英語表記のまま出力しないこと。

試合結果はデータ内の home_score と away_score が正確な最終スコアである。スコアが高いチームが勝者。この事実を文章の根拠として使うこと。

試合データ: {"match":{"id":"baseline-match","kickoff_at":"2026-01-01T00:00:00.000Z","kickoff_at_jst":"2026-01-01 (木) 09:00 JST","status":"finished","venue":"東京","home_score":24,"away_score":17,"competition":{"family":"premiership","id":"competition","name":"Premiership","name_ja":"プレミアシップ","season":"2025-26"},"home_team":{"id":"home","name":"Harlequins","name_ja":"ハーレクインズ","english_name":"Harlequins","short_code":"HAR","country":"England"},"away_team":{"id":"away","name":"Bath","name_ja":"バース","english_name":"Bath Rugby","short_code":"BAT","country":"England"}},"match_phase":null,"recent_form":{"home":[],"away":[]},"h2h_last_5":[],"match_events":[],"competition_standings":[],"projected_lineups":{"home":[],"away":[],"confirmed":{"home":false,"away":false}},"injuries":{"home":[],"away":[]},"key_stats":{"home":{"avg_points_for_last_5":25,"avg_points_against_last_5":18,"avg_score_diff_last_5":7,"result_streak":"winning","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.8},"away":{"avg_points_for_last_5":21,"avg_points_against_last_5":24,"avg_score_diff_last_5":-3,"result_streak":"mixed","games_counted":0,"wins":0,"losses":0,"draws":0,"current_streak":null,"win_rate_last_5":0.4},"match":{"penalty_goal_count":{"home":4,"away":6},"try_count":{"home":3,"away":2},"late_scoring":true}},"score_timeline":null,"derived_stats":null,"team_stats":null,"sourced_facts":[],"japanese_name_glossary":[{"kind":"player","source":"Player A","japanese":"選手A"}]}

【データスパースモード】スコアラー・ラインアップデータは存在しない。スコアのみを記述し、試合展開の描写は行わないこと。
- recent_form の直近5試合から連勝/連敗ストリーク・平均得失点の傾向（攻撃型 or 守備型か）・直近の勝ち方の特徴を読み取り本文に反映すること。冒頭は「得点力」で始めず、直近の試合展開・プレースタイルの特徴・今節の文脈から書き始めること
- h2h_last_5 の直近対戦スコアを引用し、今回の結果との比較を行うこと
- key_stats の直近平均得点・失点と今回のスコアを対比して試合の特徴を示すこと
- key_stats.match.try_count からオープンなラグビー（ハイトライ）かキック主体（ロートライ）かを評価すること
- key_stats.match.late_scoring が true の場合、終盤まで試合が動いた展開であることを明記すること

【sourced_facts: なし】外部記事・モデル訓練データ由来の統計・負傷・欠場・選手コメント・発言を一切使用してはならない。
記述できるのは試合イベント・スコア・順位表・ラインアップなど入力データに存在するものだけ。
数値を伴う統計が入力にない場合は、統計に触れずスコアの流れと戦術描写のみで構成すること。

戦術ポイント（tactical_dimension / home_situation / away_situation / matchup_implication を本文の根拠として使うこと）:
[{"tactical_dimension":"set_piece","home_situation":"ホームの状況","away_situation":"アウェーの状況","matchup_implication":"対戦上の含意","match_impact":"medium"}]"
`;
